force-app/main/default/objects/RD_Disc_LeadTime_Options__c/RD_Disc_LeadTime_Options__c.object-meta.xml
<CustomObject>
    <label>RD Disc_LeadTime_Options</label>
    <nameField>
        <label>RD Disc_LeadTime_Options</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Disc_LeadTime_Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>