force-app/main/default/objects/RD_Disc_LeadTime_Options__c/fields/ADMERK__c.field-meta.xml
<CustomField>
    <fullName>ADMERK__c</fullName>
    <label>ADMERK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>