force-app/main/default/objects/RD_Disc_LeadTime_Options__c/fields/ELECTROPOL__c.field-meta.xml
<CustomField>
    <fullName>ELECTROPOL__c</fullName>
    <label>ELECTROPOL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>