force-app/main/default/objects/RD_Disc_LeadTime_Options__c/fields/SURFFINISH__c.field-meta.xml
<CustomField>
    <fullName>SURFFINISH__c</fullName>
    <label>SURFFINISH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>