force-app/main/default/objects/RD_Disc_LeadTime_Options__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ADMERK__c</columns>
    <columns>CHINAMFG__c</columns>
    <columns>ELECTROPOL__c</columns>
    <columns>PMI__c</columns>
    <columns>RPVM084__c</columns>
    <columns>SURFFINISH__c</columns>
    <columns>Schedule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>